--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <a href="/" class="link__nav">Resources</a>
             </nav>
             <div class="buttons__header">
-                <div class="button">Log in</div>
-                <div class="button button--orange">Try it free</div>
+                <a href="/" class="button">Log in</a>
+                <a href="/" class="button button--orange">Try it free</a>
             </div>
         </div>
     </header>
@@ -35,8 +35,8 @@
                     <p class="section__first__text">A localization and translation management platform for agile teams.
                         Embrace automation, workflow transparency, and fast project delivery.</p>
                     <div class="section__first__buttons">
-                        <div class="button button--orange">Try it free</div>
-                        <div class="button">Book a demo</div>
+                        <a href="/" class="button button--orange">Try it free</a>
+                        <a href="/" class="button">Book a demo</a>
                     </div>
                     <span class="small__text">Try all features for 14 days · No credit card required</span>
                 </div>
@@ -230,14 +230,14 @@
             <p class="section__intagrate__text">Automate processes, eliminate routine tasks, and track progress with
                 ease.</p>
             <div class="section__intagrate__image"><img src="./assets/images/bird.png" alt="bird"></div>
-            <button class="button button--orange">See all integrations</button>
+            <a href="/" class="button button--orange">See all integrations</a>
         </div>
     </section>
     <section class="section__localization">
         <div class="container section__localization__block">
             <h6 class="section__intagrate__title">Integrate Lokalise with your work tools</h6>
             <p class="card__teams__text">Try for free or let us show you how it works.</p>
-            <button class="button button--black">Try it free</button>
+            <a href="/" class="button button--black">Try it free</a>
         </div>
     </section>
     <footer class="footer">
